--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -63,11 +63,11 @@ jobs:
           cache-from: type=registry,ref=cl78/devops_demo:cache
           cache-to: type=inline,mode=max
           
-      - name: Scan the Docker image
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: 'cl78/devops_demo:${{ github.sha }}'
-          format: 'table'
-          exit-code: '1' # Fail the job if vulnerabilities are found
-          ignore-unfixed: true
-          severity: 'CRITICAL,HIGH'
+      # - name: Scan the Docker image
+      #   uses: aquasecurity/trivy-action@master
+      #   with:
+      #     image-ref: 'woffee/devops_demo:${{ github.sha }}'
+      #     format: 'table'
+      #     exit-code: '1' # Fail the job if vulnerabilities are found
+      #     ignore-unfixed: true
+      #     severity: 'CRITICAL,HIGH'
